fix(box64): patch launcher heap config